--- a/deep_learning/models_1024.ipynb
+++ b/deep_learning/models_1024.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a4aed0af",
    "metadata": {},
    "outputs": [
@@ -10,27 +10,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: torch in d:\\pandas_main\\.venv\\lib\\site-packages (2.9.0)\n",
-      "Requirement already satisfied: filelock in d:\\pandas_main\\.venv\\lib\\site-packages (from torch) (3.20.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in d:\\pandas_main\\.venv\\lib\\site-packages (from torch) (4.15.0)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in d:\\pandas_main\\.venv\\lib\\site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: networkx>=2.5.1 in d:\\pandas_main\\.venv\\lib\\site-packages (from torch) (3.5)\n",
-      "Requirement already satisfied: jinja2 in d:\\pandas_main\\.venv\\lib\\site-packages (from torch) (3.1.6)\n",
-      "Requirement already satisfied: fsspec>=0.8.5 in d:\\pandas_main\\.venv\\lib\\site-packages (from torch) (2025.9.0)\n",
-      "Requirement already satisfied: setuptools in d:\\pandas_main\\.venv\\lib\\site-packages (from torch) (80.9.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in d:\\pandas_main\\.venv\\lib\\site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in d:\\pandas_main\\.venv\\lib\\site-packages (from jinja2->torch) (3.0.3)\n",
+      "Requirement already satisfied: torch in /opt/anaconda3/lib/python3.13/site-packages (2.9.0)\n",
+      "Requirement already satisfied: torchvision in /opt/anaconda3/lib/python3.13/site-packages (0.24.0)\n",
+      "Requirement already satisfied: filelock in /opt/anaconda3/lib/python3.13/site-packages (from torch) (3.17.0)\n",
+      "Requirement already satisfied: typing-extensions>=4.10.0 in /opt/anaconda3/lib/python3.13/site-packages (from torch) (4.12.2)\n",
+      "Requirement already satisfied: setuptools in /opt/anaconda3/lib/python3.13/site-packages (from torch) (72.1.0)\n",
+      "Requirement already satisfied: sympy>=1.13.3 in /opt/anaconda3/lib/python3.13/site-packages (from torch) (1.13.3)\n",
+      "Requirement already satisfied: networkx>=2.5.1 in /opt/anaconda3/lib/python3.13/site-packages (from torch) (3.4.2)\n",
+      "Requirement already satisfied: jinja2 in /opt/anaconda3/lib/python3.13/site-packages (from torch) (3.1.6)\n",
+      "Requirement already satisfied: fsspec>=0.8.5 in /opt/anaconda3/lib/python3.13/site-packages (from torch) (2025.3.2)\n",
+      "Requirement already satisfied: numpy in /opt/anaconda3/lib/python3.13/site-packages (from torchvision) (2.1.3)\n",
+      "Requirement already satisfied: pillow!=8.3.*,>=5.3.0 in /opt/anaconda3/lib/python3.13/site-packages (from torchvision) (11.1.0)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /opt/anaconda3/lib/python3.13/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in /opt/anaconda3/lib/python3.13/site-packages (from jinja2->torch) (3.0.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
-    "%pip install torch"
+    "import torch, torchvision\n",
+    "print(torch.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "13457b59",
    "metadata": {},
    "outputs": [
@@ -38,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.9.0+cpu 0.24.0+cpu\n"
+      "2.9.0 0.24.0\n"
      ]
     }
    ],
@@ -49,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "50a22eb5",
    "metadata": {},
    "outputs": [],
@@ -59,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "14741d6b",
    "metadata": {},
    "outputs": [
@@ -289,7 +293,7 @@
        " 'wide_resnet50_2']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "e1d71c13",
    "metadata": {},
    "outputs": [
@@ -351,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "657a8d91",
    "metadata": {},
    "outputs": [],
@@ -362,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f09d5b74",
    "metadata": {},
    "outputs": [],
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6620de68",
    "metadata": {},
    "outputs": [
@@ -390,9 +394,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\pandas_main\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
+      "/opt/anaconda3/lib/python3.13/site-packages/torchvision/models/_utils.py:208: UserWarning: The parameter 'pretrained' is deprecated since 0.13 and may be removed in the future, please use 'weights' instead.\n",
       "  warnings.warn(\n",
-      "d:\\pandas_main\\.venv\\Lib\\site-packages\\torchvision\\models\\_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
+      "/opt/anaconda3/lib/python3.13/site-packages/torchvision/models/_utils.py:223: UserWarning: Arguments other than a weight enum or `None` for 'weights' are deprecated since 0.13 and may be removed in the future. The current behavior is equivalent to passing `weights=None`.\n",
       "  warnings.warn(msg)\n"
      ]
     },
@@ -742,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "09e646c7",
    "metadata": {},
    "outputs": [],
@@ -753,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2916117e",
    "metadata": {},
    "outputs": [],
@@ -981,8 +985,8 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[ 6.4329, -0.0564, -0.0564,  ..., -0.0713, -0.0713, -0.0622]],\n",
-       "       grad_fn=<ViewBackward0>)"
+       "tensor([[ 8.8448e-02,  3.0936e-02,  3.0936e-02,  ..., -2.2457e+25,\n",
+       "         -9.5736e-02, -2.7887e-02]], grad_fn=<ViewBackward0>)"
       ]
      },
      "execution_count": 21,
@@ -1175,11 +1179,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch : 1 / 5 , loss : 0.4379\n",
-      "Epoch : 2 / 5 , loss : 0.2801\n",
-      "Epoch : 3 / 5 , loss : 0.2351\n",
-      "Epoch : 4 / 5 , loss : 0.2012\n",
-      "Epoch : 5 / 5 , loss : 0.1762\n"
+      "Epoch : 1 / 5 , loss : 0.4306\n",
+      "Epoch : 2 / 5 , loss : 0.2731\n",
+      "Epoch : 3 / 5 , loss : 0.2283\n",
+      "Epoch : 4 / 5 , loss : 0.1977\n",
+      "Epoch : 5 / 5 , loss : 0.1698\n"
      ]
     }
    ],
@@ -1214,7 +1218,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test accuracy : 0.9154\n"
+      "test accuracy : 0.9191\n"
      ]
     }
    ],
@@ -1330,7 +1334,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.4914008 , 0.482159  , 0.44653094], dtype=float32)"
+       "array([0.491401  , 0.48215896, 0.44653103], dtype=float32)"
       ]
      },
      "execution_count": 35,
@@ -1480,11 +1484,11 @@
      "evalue": "super(type, obj): obj (instance of CNN_CIFAR10) is not an instance or subtype of type (CNN).",
      "output_type": "error",
      "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 20\u001b[39m\n\u001b[32m     17\u001b[39m model = CNN()\n\u001b[32m     18\u001b[39m model\n\u001b[32m---> \u001b[39m\u001b[32m20\u001b[39m cnn_cifar10_model = \u001b[43mCNN_CIFAR10\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     21\u001b[39m device = torch.device(\u001b[33m'\u001b[39m\u001b[33mcuda\u001b[39m\u001b[33m'\u001b[39m  \u001b[38;5;28;01mif\u001b[39;00m torch.cuda.is_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[33m'\u001b[39m\u001b[33mcpu\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m     22\u001b[39m model.to(device)\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[41]\u001b[39m\u001b[32m, line 3\u001b[39m, in \u001b[36mCNN_CIFAR10.__init__\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mCNN\u001b[49m\u001b[43m \u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[34;43m__init__\u001b[39;49m()  \u001b[38;5;66;03m# 64, 3, 32, 32\u001b[39;00m\n\u001b[32m      4\u001b[39m     \u001b[38;5;28mself\u001b[39m.conv1 = nn.Conv2d(\u001b[32m3\u001b[39m,\u001b[32m32\u001b[39m,\u001b[32m3\u001b[39m,padding=\u001b[32m1\u001b[39m)\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mself\u001b[39m.conv2 = nn.Conv2d(\u001b[32m32\u001b[39m,\u001b[32m64\u001b[39m,\u001b[32m3\u001b[39m,padding=\u001b[32m1\u001b[39m)\n",
-      "\u001b[31mTypeError\u001b[39m: super(type, obj): obj (instance of CNN_CIFAR10) is not an instance or subtype of type (CNN)."
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m model \u001b[38;5;241m=\u001b[39m CNN()\n\u001b[1;32m     18\u001b[0m model\n\u001b[0;32m---> 20\u001b[0m cnn_cifar10_model \u001b[38;5;241m=\u001b[39m CNN_CIFAR10()\n\u001b[1;32m     21\u001b[0m device \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mdevice(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda\u001b[39m\u001b[38;5;124m'\u001b[39m  \u001b[38;5;28;01mif\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mcuda\u001b[38;5;241m.\u001b[39mis_available() \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcpu\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     22\u001b[0m model\u001b[38;5;241m.\u001b[39mto(device)\n",
+      "Cell \u001b[0;32mIn[41], line 3\u001b[0m, in \u001b[0;36mCNN_CIFAR10.__init__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;28msuper\u001b[39m(CNN , \u001b[38;5;28mself\u001b[39m)\u001b[38;5;241m.\u001b[39m\u001b[38;5;21m__init__\u001b[39m()  \u001b[38;5;66;03m# 64, 3, 32, 32\u001b[39;00m\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconv1 \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mConv2d(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m32\u001b[39m,\u001b[38;5;241m3\u001b[39m,padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconv2 \u001b[38;5;241m=\u001b[39m nn\u001b[38;5;241m.\u001b[39mConv2d(\u001b[38;5;241m32\u001b[39m,\u001b[38;5;241m64\u001b[39m,\u001b[38;5;241m3\u001b[39m,padding\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: super(type, obj): obj (instance of CNN_CIFAR10) is not an instance or subtype of type (CNN)."
      ]
     }
    ],
@@ -1653,7 +1657,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1667,7 +1671,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
